--- a/cooking-app-client/package.json
+++ b/cooking-app-client/package.json
@@ -2,7 +2,9 @@
   "name": "cooking-app-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tengoot.github.io/cooking-app/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
@@ -12,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
