--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "homepage": "http://cooking-app.bartoszkowalski.tech/",
   "dependencies": {
     "gh-pages": "^2.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "history": "^4.10.1",
+    "react": "0.0.0-experimental-f42431abe",
+    "react-dom": "0.0.0-experimental-f42431abe",
+    "react-markdown": "^4.2.2",
+    "react-relay": "0.0.0-experimental-5f1cb628",
+    "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
+    "react-router-relay": "^0.14.0",
     "react-scripts": "^3.3.0",
-    "redux": "^4.0.5"
+    "relay-runtime": "8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "relay": "relay-compiler --src ./src --schema ./data/schema.graphql --extensions js jsx"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-relay": "8.0.0",
+    "graphql": "^14.5.8",
+    "relay-compiler": "8.0.0"
   }
 }
